cli/tests/snapshot/snapshots/snapshot__query_stderr_field_path_syntax_error.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: unexpected token
  ┌─ <query>:1:7
  │
1 │ input.+foo.baz
  │       ^


